--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "path": "^0.12.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-player": "^2.16.0",
     "react-tweet": "^3.2.2",
     "tailwind-merge": "^3.2.0",
